style: fix home page height with header removing scrollbar

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .h-minus-header {
+        height: calc(100vh - 64px);
+    }
+}
